[gd_scene load_steps=9 format=3 uid="uid://bolndxsgq846l"]

[ext_resource type="Script" uid="uid://bbpmgqiljtblb" path="res://scripts/crumbs_bag.gd" id="1_2qgm5"]
[ext_resource type="Texture2D" uid="uid://badvguyp8lqdv" path="res://assets/crumb_bag.png" id="1_d4syx"]
[ext_resource type="AudioStream" uid="uid://dso77ttklfey6" path="res://assets/audio/609244__leinarts__pasta.wav" id="3_de4xn"]
[ext_resource type="Texture2D" uid="uid://bp2f13hvaoshu" path="res://assets/crumb_small.png" id="4_mhmgk"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d4syx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4syx"]
size = Vector2(56, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_de4xn"]
radius = 47.0106

[sub_resource type="Curve" id="Curve_ukjpi"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="CrumbsBag" type="RigidBody2D"]
collision_layer = 16
collision_mask = 4
physics_material_override = SubResource("PhysicsMaterial_d4syx")
script = ExtResource("1_2qgm5")
crumb_count = 35

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5, -29)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_d4syx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -17)
shape = SubResource("RectangleShape2D_d4syx")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(-1, -30)
shape = SubResource("CircleShape2D_de4xn")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_de4xn")

[node name="DamageParticles" type="CPUParticles2D" parent="."]
z_index = 300
position = Vector2(-1, -44)
emitting = false
amount = 16
texture = ExtResource("4_mhmgk")
lifetime = 1.7
one_shot = true
explosiveness = 0.8
spread = 180.0
gravity = Vector2(0, 100)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angle_min = -250.0
angle_max = 740.0
scale_amount_min = 0.2
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_ukjpi")

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="timeout" from="FreeTimer" to="." method="_on_free_timer_timeout"]
